[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/debug/Debug_kinds.gd" type="Script" id=1]
[ext_resource path="res://addons/musiclib/LegoBox/TitleGenerator/EnglishDico.gd" type="Script" id=2]
[ext_resource path="res://addons/musiclib/LegoBox/TitleGenerator/TitleGenerator.gd" type="Script" id=3]
[ext_resource path="res://addons/musiclib/LegoBox/SongTrackView.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/musiclib/tonal_progression_factory/TPFTables.gd" type="Script" id=5]

[node name="Debug_kinds" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="titleGenerator" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="dico" type="Node2D" parent="titleGenerator"]
script = ExtResource( 2 )

[node name="SongViewContainer" type="Control" parent="."]
margin_left = 155.0
margin_top = 346.0
margin_right = 755.0
margin_bottom = 486.0
__meta__ = {
"_edit_group_": true
}

[node name="backGround_cr" type="ColorRect" parent="SongViewContainer"]
margin_right = 600.0
margin_bottom = 140.0
rect_min_size = Vector2( 500, 140 )
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="SongTrackView" parent="SongViewContainer" instance=ExtResource( 4 )]
rect_min_size = Vector2( 600, 140 )

[node name="play_head_cr" type="ColorRect" parent="SongViewContainer"]
margin_top = 14.0
margin_right = 4.0
margin_bottom = 144.0
rect_min_size = Vector2( 4, 130 )
color = Color( 0.239216, 0.321569, 1, 1 )

[node name="trackDisplayMode" type="OptionButton" parent="SongViewContainer"]
margin_left = -120.0
margin_right = -30.0
margin_bottom = 20.0
text = "midi"
items = [ "midi", null, false, 0, null, "jazz chord", null, false, 1, null, "roman", null, false, 2, null, "keyboard", null, false, 3, null ]
selected = 0

[node name="trackViewScale_sl" type="VSlider" parent="SongViewContainer"]
margin_left = -80.0
margin_top = 46.0
margin_right = -64.0
margin_bottom = 136.0
min_value = 1.0
max_value = 15.0
value = 2.0

[node name="logBusConsole_rtl" type="RichTextLabel" parent="."]
margin_left = 832.0
margin_top = 346.0
margin_right = 1248.0
margin_bottom = 676.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true

[node name="tpfl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
